# NBodyProblemParallelized

./: .gitignore  CMakeLists.txt  README.md
src/: main-cuda  main-cuda.cu  main-openmp.cpp  main.cpp
visualizer/: visualizer.py
